@@ -117,7 +117,6 @@
 
         <UndefinedPropertyFetch>
             <errorLevel type="suppress">
-                <file name="app/Models/Account/Event.php" />
                 <file name="app/Models/Contact/Contact.php" />
             </errorLevel>
         </UndefinedPropertyFetch>
